# calculator_client_UDP

./: README.md  pyproject.toml
calculator_client/: UDP_client.py  __init__.py  calculate.py  cli.py
tests/: test_calculate.py
