[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calculator_client_idziegrzesprzezbobrow"
version = "0.0.1"
authors = [
  { name="Greg", email="" },
]
description = "A simple calculator_client package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    {include = "calculator_client"},
    {exclude = "tests"}
]
exclude = [
    "venv_serv",
    ".gitignore",
    ".pytest_cache"
]

[project.optional-dependencies]
test = [
    "pytest==7.2.0",
    "pytest-mock==3.10.0"
]

[project.scripts]
calculator_client_UDP = "calculator_client.cli:main"